crates/swc_ecma_react_compiler/tests/fixtures/upstream/fault-tolerance/error.var-declaration-and-mutation-of-props/error.txt
Found 2 errors:

Todo: (BuildHIR::lowerStatement) Handle var kinds in VariableDeclaration

error.var-declaration-and-mutation-of-props.ts:9:2
   7 | function Component(props) {
   8 |   // Error: var declaration (Todo from BuildHIR)
>  9 |   var items = props.items;
     |   ^^^^^^^^^^^^^^^^^^^^^^^^ (BuildHIR::lowerStatement) Handle var kinds in VariableDeclaration
  10 |
  11 |   // Error: mutating frozen props (detected during inference)
  12 |   props.items = [];

Error: This value cannot be modified

Modifying component props or hook arguments is not allowed. Consider using a local variable instead.

error.var-declaration-and-mutation-of-props.ts:12:2
  10 |
  11 |   // Error: mutating frozen props (detected during inference)
> 12 |   props.items = [];
     |   ^^^^^ value cannot be modified
  13 |
  14 |   return <div>{items.length}</div>;
  15 | }
